<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_with_fido2"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    <EditText
            android:id="@+id/signupWebAuthnEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/email"
            android:lines="1" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

        <EditText
                android:id="@+id/signupWebAuthnGivenName"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/given_name"
                android:hint="@string/given_name"
                android:inputType="text"
                android:lines="1" />


        <EditText
                android:id="@+id/signupWebAuthnFamilyName"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/family_name"
                android:lines="1"
                android:autofillHints="@string/family_name" />
    </LinearLayout>

    <EditText
            android:id="@+id/signupWebAuthnNewFriendlyName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/friendly_name"
            android:lines="1"
            android:importantForAutofill="no" />

    <Button
            android:id="@+id/signupWithWebAuthn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signup" />
</LinearLayout>