<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <TextView
            android:id="@+id/loginWithCallbackTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange_tkn_at"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    <EditText
            android:id="@+id/tkn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tkn"
            android:paddingTop="0dp"
            android:importantForAutofill="no"
            android:inputType="text" />

    <Button
            android:id="@+id/loginWithCallback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_with_callback" />
</LinearLayout>