<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            tools:ignore="UselessParent">

        <EditText
                android:id="@+id/newFriendlyName"
                android:inputType="text"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/friendly_name"
                android:lines="1"
                android:importantForAutofill="no" />

        <Button
                android:id="@+id/addNewDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_new_fido2_device" />
    </LinearLayout>

    <TextView
            android:id="@+id/devicesTitle"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:visibility="invisible"
            android:text="@string/devices_title" />

    <ListView
            android:id="@+id/devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>